--- a/activity/research.html
+++ b/activity/research.html
@@ -7,7 +7,7 @@
         ACM SAHYADRI
     </title>
     <link rel="icon" href="Untitled design (1).png" type="image/x-icon">
-
+<!--research page-->
 
 
     <meta charset="utf-8">
